# EscaTrade

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
src/: client.cpp  server.cpp
src/common/: logger.hpp
