cmake_minimum_required(VERSION 3.20)
set(VCPKG_MANIFEST_MODE ON)
cmake_policy(SET CMP0167 NEW)
project(EscaTrade LANGUAGES CXX)
if(WIN32)
    add_compile_definitions(_WIN32_WINNT=0x0A00)
endif()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Boost REQUIRED COMPONENTS asio)
add_executable(EscaServer src/server.cpp)
add_executable(EscaClient src/client.cpp)
find_package(spdlog CONFIG REQUIRED)
target_link_libraries(EscaServer PRIVATE Boost::asio spdlog::spdlog)
target_link_libraries(EscaClient PRIVATE Boost::asio spdlog::spdlog)